// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StateBar should render correctly with a children 1`] = `
<DocumentFragment>
  .cache-1qr3n93-StyledText-StyledText {
  color: #151a2d;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
}

.cache-rr62n5-StyledText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-pftomu-StyledProgressContainer-StyledProgressBar {
  overflow: hidden;
  position: relative;
  height: 4px;
  margin-left: 0;
  margin-right: 0;
  border-radius: 2px;
  background-color: #f6f6f8;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-top: 12px;
}

.cache-pq81p8-StyledFilled {
  border-radius: 2px;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  background-color: #4f0599;
  -webkit-transition: 0.3s width;
  transition: 0.3s width;
  width: 0%;
}

<div>
    <div
      class="efuzcis1 cache-1qr3n93-StyledText-StyledText e1tg3t120"
    >
      <strong>
        : 
      </strong>
      <span
        class="cache-rr62n5-StyledText e1tg3t120"
      >
        Hello
      </span>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="efuzcis0 cache-pftomu-StyledProgressContainer-StyledProgressBar et8xa2y2"
      role="progressbar"
    >
      <div
        class="cache-pq81p8-StyledFilled et8xa2y0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`StateBar should render correctly with a value < 70 1`] = `
<DocumentFragment>
  .cache-1qr3n93-StyledText-StyledText {
  color: #151a2d;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
}

.cache-rr62n5-StyledText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-pftomu-StyledProgressContainer-StyledProgressBar {
  overflow: hidden;
  position: relative;
  height: 4px;
  margin-left: 0;
  margin-right: 0;
  border-radius: 2px;
  background-color: #f6f6f8;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-top: 12px;
}

.cache-1n6y0uh-StyledFilled {
  border-radius: 2px;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  background-color: #4f0599;
  -webkit-transition: 0.3s width;
  transition: 0.3s width;
  width: 69%;
}

<div>
    <div
      class="efuzcis1 cache-1qr3n93-StyledText-StyledText e1tg3t120"
    >
      <strong>
        : 
      </strong>
      <span
        class="cache-rr62n5-StyledText e1tg3t120"
      >
        Hello
      </span>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="69"
      class="efuzcis0 cache-pftomu-StyledProgressContainer-StyledProgressBar et8xa2y2"
      role="progressbar"
    >
      <div
        class="cache-1n6y0uh-StyledFilled et8xa2y0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`StateBar should render correctly with a value < 90 && >= 70 1`] = `
<DocumentFragment>
  .cache-1qr3n93-StyledText-StyledText {
  color: #151a2d;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
}

.cache-rr62n5-StyledText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-pftomu-StyledProgressContainer-StyledProgressBar {
  overflow: hidden;
  position: relative;
  height: 4px;
  margin-left: 0;
  margin-right: 0;
  border-radius: 2px;
  background-color: #f6f6f8;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-top: 12px;
}

.cache-w970rp-StyledFilled {
  border-radius: 2px;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  background-color: #ff8c69;
  -webkit-transition: 0.3s width;
  transition: 0.3s width;
  width: 71%;
}

<div>
    <div
      class="efuzcis1 cache-1qr3n93-StyledText-StyledText e1tg3t120"
    >
      <strong>
        : 
      </strong>
      <span
        class="cache-rr62n5-StyledText e1tg3t120"
      >
        Hello
      </span>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="71"
      class="efuzcis0 cache-pftomu-StyledProgressContainer-StyledProgressBar et8xa2y2"
      role="progressbar"
    >
      <div
        class="cache-w970rp-StyledFilled et8xa2y0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`StateBar should render correctly with a value >= 90 1`] = `
<DocumentFragment>
  .cache-1qr3n93-StyledText-StyledText {
  color: #151a2d;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
}

.cache-rr62n5-StyledText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-pftomu-StyledProgressContainer-StyledProgressBar {
  overflow: hidden;
  position: relative;
  height: 4px;
  margin-left: 0;
  margin-right: 0;
  border-radius: 2px;
  background-color: #f6f6f8;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-top: 12px;
}

.cache-1u63zvy-StyledFilled {
  border-radius: 2px;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  background-color: #dd3252;
  -webkit-transition: 0.3s width;
  transition: 0.3s width;
  width: 90%;
}

<div>
    <div
      class="efuzcis1 cache-1qr3n93-StyledText-StyledText e1tg3t120"
    >
      <strong>
        : 
      </strong>
      <span
        class="cache-rr62n5-StyledText e1tg3t120"
      >
        Hello
      </span>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="90"
      class="efuzcis0 cache-pftomu-StyledProgressContainer-StyledProgressBar et8xa2y2"
      role="progressbar"
    >
      <div
        class="cache-1u63zvy-StyledFilled et8xa2y0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`StateBar should render correctly with default props 1`] = `
<DocumentFragment>
  .cache-1qr3n93-StyledText-StyledText {
  color: #151a2d;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
}

.cache-pftomu-StyledProgressContainer-StyledProgressBar {
  overflow: hidden;
  position: relative;
  height: 4px;
  margin-left: 0;
  margin-right: 0;
  border-radius: 2px;
  background-color: #f6f6f8;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-top: 12px;
}

.cache-pq81p8-StyledFilled {
  border-radius: 2px;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  background-color: #4f0599;
  -webkit-transition: 0.3s width;
  transition: 0.3s width;
  width: 0%;
}

<div>
    <div
      class="efuzcis1 cache-1qr3n93-StyledText-StyledText e1tg3t120"
    >
      <strong />
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="efuzcis0 cache-pftomu-StyledProgressContainer-StyledProgressBar et8xa2y2"
      role="progressbar"
    >
      <div
        class="cache-pq81p8-StyledFilled et8xa2y0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`StateBar should render correctly with unlimited value 1`] = `
<DocumentFragment>
  .cache-1qr3n93-StyledText-StyledText {
  color: #151a2d;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
}

.cache-rr62n5-StyledText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-pftomu-StyledProgressContainer-StyledProgressBar {
  overflow: hidden;
  position: relative;
  height: 4px;
  margin-left: 0;
  margin-right: 0;
  border-radius: 2px;
  background-color: #f6f6f8;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-top: 12px;
}

.cache-1igbyob-StyledFilled {
  border-radius: 2px;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  background-color: #22c8a2;
  -webkit-transition: 0.3s width;
  transition: 0.3s width;
  width: 100%;
}

<div>
    <div
      class="efuzcis1 cache-1qr3n93-StyledText-StyledText e1tg3t120"
    >
      <strong>
        : 
      </strong>
      <span
        class="cache-rr62n5-StyledText e1tg3t120"
      >
        Hello
      </span>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="100"
      class="efuzcis0 cache-pftomu-StyledProgressContainer-StyledProgressBar et8xa2y2"
      role="progressbar"
    >
      <div
        class="cache-1igbyob-StyledFilled et8xa2y0"
      />
    </div>
  </div>
</DocumentFragment>
`;
